force-app/main/default/objects/Flight__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <description>BOM</description>
    <label>Arrival Airport</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>