force-app/main/default/objects/Flight__c/fields/Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_Time__c</fullName>
    <label>Arrival Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>