force-app/main/default/objects/Flight__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <description>IATA code of the departure airport, e.g. DEL</description>
    <inlineHelpText>IATA code of the departure airport, e.g. DEL</inlineHelpText>
    <label>Departure Airport</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>