force-app/main/default/objects/Flight__c/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <label>Departure Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>