force-app/main/default/objects/Flight__c/fields/Flight_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Flight_Duration_Hours__c</fullName>
    <formula>(Arrival_Date_Time__c - Departure_Date_Time__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>