force-app/main/default/objects/Flight__c/fields/Flight_Route__c.field-meta.xml
<CustomField>
    <fullName>Flight_Route__c</fullName>
    <formula>Departure_Airport__c  &amp; &quot;-&gt;&quot; &amp;  Arrival_Airport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Route</label>
    <type>Text</type>
</CustomField>