force-app/main/default/objects/Flight__c/fields/Flight_Status__c.field-meta.xml
<CustomField>
    <fullName>Flight_Status__c</fullName>
    <label>Flight Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Departed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Arrived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>