force-app/main/default/objects/Flight__c/fields/Total_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats__c</fullName>
    <description>ex:180</description>
    <label>Total Seats</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>