force-app/main/default/objects/Flight__c/validationRules/Arrival_Must_Be_After_Departure.validationRule-meta.xml
<ValidationRule>
    <fullName>Arrival_Must_Be_After_Departure</fullName>
    <active>true</active>
    <errorConditionFormula>Arrival_Date_Time__c  &lt;=  Departure_Date_Time__c</errorConditionFormula>
    <errorDisplayField>Arrival_Date_Time__c</errorDisplayField>
    <errorMessage>Arrival Date &amp; Time must be later than Departure Date &amp; Time.</errorMessage>
</ValidationRule>