force-app/main/default/objects/Flight__c/validationRules/Available_Seats_Cannot_Exceed_Total_Seat.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Seats_Cannot_Exceed_Total_Seat</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Seats__c  &gt;  Total_Seats__c</errorConditionFormula>
    <errorDisplayField>Available_Seats__c</errorDisplayField>
    <errorMessage>Available Seats cannot be greater than Total Seats.</errorMessage>
</ValidationRule>