force-app/main/default/objects/Flight__c/validationRules/Departure_Arrival_Cannot_Be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_Arrival_Cannot_Be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Airport__c  =  Arrival_Airport__c</errorConditionFormula>
    <errorDisplayField>Departure_Airport__c</errorDisplayField>
    <errorMessage>Departure Airport and Arrival Airport cannot be the same.</errorMessage>
</ValidationRule>