force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flight_Route__c</columns>
    <columns>Total_Seats__c</columns>
    <columns>Available_Seats__c</columns>
    <columns>Flight_Status__c</columns>
    <columns>Base_Fare__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>